# bloomy-mcp

./: .env.example  .envrc  .gitignore  README.md  claude_desktop_config.json.example  pyproject.toml  requirements.txt  setup.py
src/bloomy_mcp/: __init__.py  client.py  formatters.py  introspection.py  operations.py  server.py
